Post-it unit tests